--- a/src/notFound/localhost.html
+++ b/src/notFound/localhost.html
@@ -9,28 +9,52 @@
     <h1>Ops !</h1>
     <h2>Acho que errou o caminho.</h2>
     <h2>Aqui estão as rotas existentes:</h2>
-    <a href="http://localhost:3100/register">Rota para cadastro</a>
     <br>
-    <a href="http://localhost:3100/register/cursos">Rota para cursos já cadastrados</a>
+    <p>Rota para cadastro (POST)</p>
+    <a href="http://localhost:3100/register">http://localhost:3100/register</a>
     <br>
-    <a href="http://localhost:3100/register/unidades">Rota para unidades já cadastradas</a>
+    <p>Rota para cursos já cadastrados (GET)</p>
     <br>
-    <a href="http://localhost:3100/login">Rota para login</a>
+    <a href="http://localhost:3100/register/cursos">http://localhost:3100/register/cursos</a>
     <br>
-    <a href="http://localhost:3100/post">Rota para criar post</a>
+    <p>Rota para unidades já cadastradas (GET)</p>
     <br>
-    <a href="http://localhost:3100/post/delete/:id">Rota para deletar post</a>
+    <a href="http://localhost:3100/register/unidades">http://localhost:3100/register/unidades</a>
     <br>
-    <a href="http://localhost:3100/home/:pg">Rota para home</a>
+    <p>Rota para login (POST)</p>
     <br>
-    <a href="http://localhost:3100/comentario">Rota para criar comentário</a>
+    <a href="http://localhost:3100/login">http://localhost:3100/login</a>
     <br>
-    <a href="http://localhost:3100/comentario/buscar/:id">Rota para ver comentários</a>
+    <p>Rota para criar post (POST)</p>
     <br>
-    <a href="http://localhost:3100/filtro/:pg">Rota para filtrar publicações</a>
+    <a href="http://localhost:3100/post">http://localhost:3100/post</a>
     <br>
-    <a href="http://localhost:3100/perfil/:id">Rota para perfil</a>
+    <p>Rota para deletar post (DELETE)</p>
     <br>
-    <a href="http://localhost:3100/perfil/editar/:id">Rota para editar perfil</a>
+    <a href="http://localhost:3100/post/delete/:id">http://localhost:3100/post/delete/:id</a>
+    <br>
+    <p>Rota para home (GET)</p>
+    <br>
+    <a href="http://localhost:3100/home/:pg">http://localhost:3100/home/:pg</a>
+    <br>
+    <p>Rota para criar comentário (POST)</p>
+    <br>
+    <a href="http://localhost:3100/comentario">http://localhost:3100/comentario</a>
+    <br>
+    <p>Rota para ver comentários (GET)</p>
+    <br>
+    <a href="http://localhost:3100/comentario/buscar/:id">http://localhost:3100/comentario/buscar/:id</a>
+    <br>
+    <p>Rota para filtrar publicações (GET)</p>
+    <br>
+    <a href="http://localhost:3100/filtro/:pg">http://localhost:3100/filtro/:pg</a>
+    <br>
+    <p>Rota para perfil (GET)</p>
+    <br>
+    <a href="http://localhost:3100/perfil/:id">http://localhost:3100/perfil/:id</a>
+    <br>
+    <p>Rota para editar perfil (PUT)</p>
+    <br>
+    <a href="http://localhost:3100/perfil/editar/:id">http://localhost:3100/perfil/editar/:id</a>
 </body>
 </html>
