--- a/src/notFound/server.html
+++ b/src/notFound/server.html
@@ -9,28 +9,52 @@
     <h1>Ops !</h1>
     <h2>Acho que errou o caminho.</h2>
     <h2>Aqui estão as rotas existentes:</h2>
-    <a href="https://backend-3cga.onrender.com/register">Rota para cadastro</a>
     <br>
-    <a href="https://backend-3cga.onrender.com/register/cursos">Rota para cursos já cadastrados</a>
+    <p>Rota para cadastro (POST)</p>
+    <a href="https://backend-3cga.onrender.com/register">https://backend-3cga.onrender.com/register</a>
     <br>
-    <a href="https://backend-3cga.onrender.com/register/unidades">Rota para unidades já cadastradas</a>
+    <p>Rota para cursos já cadastrados (GET)</p>
     <br>
-    <a href="https://backend-3cga.onrender.com/login">Rota para login</a>
+    <a href="https://backend-3cga.onrender.com/register/cursos">https://backend-3cga.onrender.com/register/cursos</a>
     <br>
-    <a href="https://backend-3cga.onrender.com/post">Rota para criar post</a>
+    <p>Rota para unidades já cadastradas (GET)</p>
     <br>
-    <a href="https://backend-3cga.onrender.com/post/delete/:id">Rota para deletar post</a>
+    <a href="https://backend-3cga.onrender.com/register/unidades">https://backend-3cga.onrender.com/register/unidades</a>
     <br>
-    <a href="https://backend-3cga.onrender.com/home/:pg">Rota para home</a>
+    <p>Rota para login (POST)</p>
     <br>
-    <a href="https://backend-3cga.onrender.com/comentario">Rota para criar comentário</a>
+    <a href="https://backend-3cga.onrender.com/login">https://backend-3cga.onrender.com/login</a>
     <br>
-    <a href="https://backend-3cga.onrender.com/comentario/buscar/:id">Rota para ver comentários</a>
+    <p>Rota para criar post (POST)</p>
     <br>
-    <a href="https://backend-3cga.onrender.com/filtro/:pg">Rota para filtrar publicações</a>
+    <a href="https://backend-3cga.onrender.com/post">https://backend-3cga.onrender.com/post</a>
     <br>
-    <a href="https://backend-3cga.onrender.com/perfil/:id">Rota para perfil</a>
+    <p>Rota para deletar post (DELETE)</p>
     <br>
-    <a href="https://backend-3cga.onrender.com/perfil/editar/:id">Rota para editar perfil</a>
+    <a href="https://backend-3cga.onrender.com/post/delete/:id">https://backend-3cga.onrender.com/post/delete/:id</a>
+    <br>
+    <p>Rota para home (GET)</p>
+    <br>
+    <a href="https://backend-3cga.onrender.com/home/:pg">https://backend-3cga.onrender.com/home/:pg</a>
+    <br>
+    <p>Rota para criar comentário (POST)</p>
+    <br>
+    <a href="https://backend-3cga.onrender.com/comentario">https://backend-3cga.onrender.com/comentario</a>
+    <br>
+    <p>Rota para ver comentários (GET)</p>
+    <br>
+    <a href="https://backend-3cga.onrender.com/comentario/buscar/:id">https://backend-3cga.onrender.com/comentario/buscar/:id</a>
+    <br>
+    <p>Rota para filtrar publicações (GET)</p>
+    <br>
+    <a href="https://backend-3cga.onrender.com/filtro/:pg">https://backend-3cga.onrender.com/filtro/:pg</a>
+    <br>
+    <p>Rota para perfil (GET)</p>
+    <br>
+    <a href="https://backend-3cga.onrender.com/perfil/:id">https://backend-3cga.onrender.com/perfil/:id</a>
+    <br>
+    <p>Rota para editar perfil (PUT)</p>
+    <br>
+    <a href="https://backend-3cga.onrender.com/perfil/editar/:id">https://backend-3cga.onrender.com/perfil/editar/:id</a>
 </body>
 </html>
