--- a/src/notFound/localhost.html
+++ b/src/notFound/localhost.html
@@ -10,6 +10,10 @@
     <h2>Acho que errou o caminho.</h2>
     <h2>Aqui estão as rotas existentes:</h2>
     <br>
+    <p>Documentação</p>
+    <a href="http://localhost:3100/api-docs">http://localhost:3100/api-docs</a>
+    <br>
+    <br>
     <p>Rota para cadastro (POST)</p>
     <a href="http://localhost:3100/register">http://localhost:3100/register</a>
     <br>
