--- a/src/notFound/server.html
+++ b/src/notFound/server.html
@@ -10,6 +10,10 @@
     <h2>Acho que errou o caminho.</h2>
     <h2>Aqui estão as rotas existentes:</h2>
     <br>
+    <p>Documentação</p>
+    <a href="https://backend-3cga.onrender.com/api-docs">https://backend-3cga.onrender.com/api-docs</a>
+    <br>
+    <br>
     <p>Rota para cadastro (POST)</p>
     <a href="https://backend-3cga.onrender.com/register">https://backend-3cga.onrender.com/register</a>
     <br>
